02-pod-provision-nfs.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: wordpress
  name: nfs-pod-provisioner
spec:
  selector:
    matchLabels:
      app: nfs-pod-provisioner
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nfs-pod-provisioner
    spec:
      serviceAccountName: nfs-pod-provisioner-sa # name of service account
      containers:
      - name: nfs-pod-provisioner
        image: registry.k8s.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2
        volumeMounts:
        - name: nfs-provisioner-v
          mountPath: /persistentvolumes
      volumes:
      - name: nfs-provisioner-v # same as volumemouts name
        nfs:
          server: 10.100.0.204
          path: /home/k8s_nfs
