10-deployment-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  name: tcs-wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcs-wordpress
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: tcs-wordpress
        version: "1"
    spec:
      containers:
      - name: tcs-wordpress
        image: wordpress:php7.4-apache
        ports:
        - containerPort:  80
