04-service-mysql.yaml
# Headless service for stable DNS entries of StatefulSet members.
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: tcs-mysql
  labels:
    app: tcs-mysql
    app.kubernetes.io/name: mysql
spec:
  ports:
  - name: tcs-mysql
    port: 3306
  clusterIP: None
  selector:
    app: tcs-mysql
---
# Client service for connecting to any MySQL instance for reads.
# For writes, you must instead connect to the primary: mysql-0.mysql.
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: tcs-mysql-read
  labels:
    app: tcs-mysql
    app.kubernetes.io/name: mysql
    readonly: "true"
spec:
  ports:
  - name: tcs-mysql
    port: 3306
  selector:
    app: tcs-mysql
