11-service-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: tcs-wordpress
spec:
  selector:
    app: tcs-wordpress
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
