12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wordpress
  name: tcs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: tcs-wordpress
            port:
              number: 30001
